language/move-lang/tests/move_check/expansion/module_alias_as_type.move
address 0x2 {

module X {}

module M {
    use 0x2::X;
    fun foo(x: X) {}
}

}
